# web-boardimage

./: .gitmodules  .tool-versions  Pipfile  README.md  default.css  lichess-blue.css  lichess-brown.css  lichess-brown.json  pychess.py  pychess_svg.py  pyproject.toml  requirements.txt  server.py
themes/: lichess-blue.json  wikipedia.json
