[project]
name = "web-boardimage"
version = "0.1.0"
description = "An HTTP service that renders chess board images"
readme = "README.md"
authors = [
    { name = "Niklas Fiekas", email = "niklas.fiekas@backscattering.de" },
]
requires-python = ">=3.9"
dependencies = [
    "aiohttp~=3.12.15",
    "chess~=1.11.2",
    "CairoSVG~=2.8.2",
]
